--- a/templates/news_one.html
+++ b/templates/news_one.html
@@ -1,17 +1,18 @@
-<!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
+
 {% extends 'flatpages/default.html' %}
 
-<!-- Название у нас будет Product -->
+{% load custom_filters %}
+
 {% block title %}
     Новость
 {% endblock title %}
 
-<!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
+
 {% block content %}
     {% if news_one %}
-        <h2>{{ news_one.title }}</h2>
+        <h2>{{ news_one.title|censor }}</h2>
         <h3>{{ news_one.create_date|date:'d.m.Y' }}</h3>
-        <p>{{ news_one.text }}</p>
+        <p>{{ news_one.text|censor }}</p>
         <h5>{{ news_one.author.author }}</h5>
     {% else %}
         <h2>Упс! Тут ничего нет...</h2>
